--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,10 @@ header {
   margin: 0px 40px 0px 40px;
 }
 
+.container {
+  margin: 0px 40px 0px 40px;
+}
+
 body {
   font-family: "Oswald", sans-serif;
 }
@@ -18,7 +22,7 @@ p {
 
 @media screen and (min-width: 1000px) {
   .container {
-    padding: 0;
+    padding: 0 auto;
     max-width: 1000px;
     margin: 0 auto;
   }
