--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@
 
 .get-in-touch {
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 button {
@@ -80,6 +82,17 @@ button {
   margin-top: 10px;
   border: 0px;
   border-radius: 0.5rem;
+  margin-bottom: 40px;
+}
+
+.end-section {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.all-rights {
+  font-family: "Times New Roman", Times, serif;
+  color: rgb(218, 215, 215);
 }
 
 @media screen and (min-width: 480px) {
@@ -107,14 +120,34 @@ button {
     padding-right: 60px;
   }
 
+  .container {
+    margin: 0px;
+  }
+
   .img1,
   .img2,
   .img3,
   .img4,
   .img5,
   .img6 {
-    width: 80%;
+    width: 95%;
     height: auto;
     margin-bottom: 10px;
   }
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  .contacts {
+    max-width: 355px;
+  }
 }
+
+/* .name-email {
+  display: flex;
+  flex-wrap: nowrap;
+} */
