--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid rgb(194, 191, 191);
+  background: transparent;
 }
 
 button {
